k8s-istio-app/auth/3-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-canary
  namespace: demo
spec:
  ports:
  - port: 3001
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: auth

---
apiVersion: v1
kind: Service
metadata:
  name: auth-stable
  namespace: demo

spec:
  ports:
  - port: 3001
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: auth
